# zmbt-framework

./: .bazelrc  .clang-tidy  .gitignore  404.html  BUILD.bazel  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MODULE.bazel  NOTICE  README.md  SECURITY.md  WORKSPACE  index.html  mkdocs.yml  requirements.txt  run-dev-container.sh
templates/expr/: BUILD.bazel  data.yaml  expr_helpers.py  expression_api.cpp  expression_api.hpp  expression_grammar.cpp  expression_keyword.cpp  expression_keyword.hpp  keyword.cpp  keyword.hpp  keyword_grammar.cpp  keywords.yaml
zmbt/: BUILD.bazel
zmbt-framework/backends/cxx/: BUILD.bazel  codegen.sh  config.bzl  index.md
zmbt-framework/backends/cxx/include/: zenseact-mbt.hpp
zmbt-framework/backends/cxx/include/zmbt/: all.hpp  api.hpp  appconfig.hpp  application.hpp  core.hpp  decor.hpp  expr.hpp  logging.hpp  mapping.hpp  model.hpp  namespaces.dox  reflect.hpp
zmbt-framework/backends/cxx/include/zmbt/api/: model_test.hpp  ns.hpp
zmbt-framework/backends/cxx/src/: main_boost.cpp  main_gtest.cpp
zmbt-framework/backends/cxx/src/appconfig/: config.cpp  init.cpp  init_zmbt.cpp  logger.cpp  logging.cpp  test_failure.cpp
zmbt-framework/backends/cxx/src/core/: entity_id.cpp  exceptions.cpp  format_string.cpp  get_info.cpp  interface_id.cpp  json_iter.cpp  json_node.cpp  json_number_cast.cpp  json_pretty_print.cpp  json_traverse.cpp  object_id.cpp  parameter.cpp  slice.cpp
zmbt-framework/backends/cxx/src/expr/: api.cpp  api_details.cpp  api_signatures.cpp  encoding.cpp  eval.cpp  eval_context.cpp  eval_log.cpp  eval_params.cpp  expr_eval_add.cpp  expr_eval_switch.cpp  expression eval_log.cpp  expression.cpp  expression_accessors.cpp  expression_api.cpp  expression_api_details.cpp  expression_ctors.cpp  expression_eval.cpp  expression_eval_autogen.cpp  expression_eval_codegen_fn.cpp  expression_eval_const.cpp  expression_eval_impl.cpp  expression_eval_operator.cpp  expression_eval_special.cpp  expression_grammar.cpp  expression_operators.cpp  expression_prettify.cpp  expression_static.cpp  generic_signal_operator.cpp  global_env.cpp  impl_codegen.cpp  impl_codegen_fn.cpp  impl_const.cpp  impl_debug.cpp  impl_operator.cpp  impl_properties.cpp  impl_query.cpp  impl_recur.cpp  impl_regex.cpp  impl_restruct.cpp  impl_set.cpp  (+10 more)
zmbt-framework/backends/cxx/src/mapping/: channel_handle.cpp  definition_helper.cpp  definition_machine.cpp  model_definition_helper.cpp  model_definition_transition_templates.cpp  pipe_handle.cpp  test_diagnostics.cpp  test_parameter_resolver.cpp  test_runner.cpp
zmbt-framework/backends/cxx/src/model/: environment.cpp  environment_data.cpp  environment_interface_record.cpp  expression.cpp  expression_api.cpp  expression_api_details.cpp  expression_eval_codegen_fn.cpp  expression_eval_const.cpp  expression_eval_impl.cpp  expression_eval_operator.cpp  expression_eval_special.cpp  expression_eval_unary_math.cpp  generator.cpp  generic_signal_operator.cpp  global_flags.cpp  global_stats.cpp  injection_table.cpp  keyword.cpp  keyword_classifier.cpp  keyword_codegen_type.cpp  keyword_grammar.cpp  keyword_is_binary.cpp  keyword_is_boolean.cpp  output_capture.cpp  output_recorder.cpp  param_transform.cpp  parameter.cpp  permanent_data.cpp  signal_operator_handler.cpp  test_failure.cpp
zmbt-framework/backends/cxx/src/reflect/: reflect.cpp
zmbt-framework/backends/cxx/test/: BUILD.bazel  core_entity_id.cpp  core_interface_traits.cpp  core_json_iter.cpp  core_json_node.cpp  core_slice.cpp  custom_handler_test.cpp  demo_custom_invocation.cpp  demo_decor.cpp  demo_ducktyping.cpp  demo_hermetic_serialization.cpp  demo_lib.cpp  demo_precise.cpp  expr_api.cpp  expr_encoding.cpp  expr_operator.cpp  gtest_test.cpp  keyword_serialization_speed.cpp  mapping_combo.cpp  mapping_except.cpp  mapping_smoke.cpp  mapping_test.cpp  mapping_types.cpp  model_env.cpp  model_expression.cpp  model_generic_signal.cpp  model_ifc_rec.cpp  model_output_recorder_gtest.cpp  model_precise.cpp  model_registry.cpp  model_trig.cpp  reflect_entity_id.cpp  reflect_initialization.cpp  reflect_invocation.cpp  reflect_serialization.cpp  rules.bzl  run_in_gtest.cpp  signal_mapping_stress_test.cpp  threads_env.cpp  version.cpp
zmbt-framework/cli/: README.md  pyproject.toml  tox.ini
zmbt-framework/cli/zmbt/: __init__.py
zmbt-framework/cli/zmbt/_internal/: yaml.py
zmbt-framework/cli/zmbt/driver/: __main__.py
zmbt-framework/cli/zmbt/driver/_cli/: __init__.py  definition.py  definition.yaml  group.py  types.py
zmbt/include/: zenseact-mbt.hpp
zmbt/include/zmbt/: all.hpp  application.hpp  core.hpp  model.hpp  reflect.hpp
zmbt/include/zmbt/application/: init_test.hpp
zmbt/include/zmbt/core/: generic_traits.hpp  instantiation_assert.hpp  interface_id.hpp  json_iter.hpp  json_pretty_print.hpp  object_id.hpp  operator_traits.hpp  parameter.hpp  tuple_exchange.hpp  type_tag.hpp
zmbt/include/zmbt/mapping/: definition_machine.hpp  definition_machine_states.hpp  definition_machine_tt.hpp  extern_templates.hpp  test_diagnostics.hpp  test_parameter_resolver.hpp
zmbt/include/zmbt/model/: environment_data.hpp  environment_interface_record.hpp  exceptions.hpp  expression.hpp  expression_api.hpp  expression_api_templates.hpp  expression_keyword.hpp  param_transform.hpp  precise_real.hpp  test_failure.hpp  trigger.hpp
zmbt/include/zmbt/reflect/: initialization_policy.hpp  invocation_policy.hpp
zmbt/src/: boost_test_main.cpp
zmbt/src/application/: init_test.cpp
zmbt/src/core/: format_string.cpp  interface_id.cpp  json_iter.cpp  json_node.cpp  json_pretty_print.cpp
zmbt/src/mapping/: channel_handle.cpp  test_parameter_resolver.cpp
zmbt/src/model/: expression.cpp  expression_grammar.cpp  expression_keyword.cpp  param_transform.cpp  signal_operator_handler.cpp
zmbt/src/reflect/: reflect.cpp
zmbt/test/: BUILD.bazel  core_entity_id.cpp  core_interface_traits.cpp  core_json_node.cpp  demo_ducktyping.cpp  demo_lib.cpp  mapping_smoke.cpp  mapping_test.cpp  model_env.cpp  model_sigpath.cpp  reflect_entity_id.cpp  reflect_initialization.cpp  rules.bzl
(+2666 files in other folders)
