# (c) Copyright 2024 Zenseact AB
# SPDX-License-Identifier: Apache-2.0

module(
    name = "com_github_zenseact_zmbt_framework",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.3.1")

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

boost_cxx_version = "1.89.0.bcr.1"

bazel_dep(name = "boost.algorithm", version = boost_cxx_version)
bazel_dep(name = "boost.callable_traits", version = boost_cxx_version)
bazel_dep(name = "boost.container_hash", version = boost_cxx_version)
bazel_dep(name = "boost.describe", version = boost_cxx_version)
bazel_dep(name = "boost.filesystem", version = boost_cxx_version)
bazel_dep(name = "boost.format", version = boost_cxx_version)
bazel_dep(name = "boost.iostreams", version = boost_cxx_version)
bazel_dep(name = "boost.json", version = boost_cxx_version)
bazel_dep(name = "boost.lockfree", version = boost_cxx_version)
bazel_dep(name = "boost.math", version = boost_cxx_version)
bazel_dep(name = "boost.mp11", version = boost_cxx_version)
bazel_dep(name = "boost.optional", version = boost_cxx_version)
bazel_dep(name = "boost.phoenix", version = boost_cxx_version)
bazel_dep(name = "boost.program_options", version = boost_cxx_version)
bazel_dep(name = "boost.spirit", version = boost_cxx_version)
bazel_dep(name = "boost.system", version = boost_cxx_version)
bazel_dep(name = "boost.test", version = boost_cxx_version)
bazel_dep(name = "boost.type_index", version = boost_cxx_version)
bazel_dep(name = "boost.type_traits", version = boost_cxx_version)
bazel_dep(name = "boost.unordered", version = boost_cxx_version)
bazel_dep(name = "boost.utility", version = boost_cxx_version)
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "googletest")
single_version_override(
    module_name = "googletest",
    version = "1.14.0.bcr.1",
)
