# copyright (c) Copyright 2024 Zenseact AB
# SPDX-License-Identifier: Apache-2.0

load("//zmbt/test:rules.bzl", "unit_test_group")

unit_test_group(
    lib = "//zmbt:core",
    srcs = glob([
        "core_*.cpp",
    ]),
)

unit_test_group(
    lib = "//zmbt:reflect",
    srcs = glob([
        "reflect_*.cpp",
    ]),
)

unit_test_group(
    lib = "//zmbt:model",
    srcs = glob([
        "model_*.cpp",
    ]),
)

unit_test_group(
    lib = "//zmbt:mapping",
    srcs = glob([
        "mapping_*.cpp",
    ]),
)

unit_test_group(
    lib = "//zmbt:zmbt",
    srcs = glob([
        "zmbt_*.cpp",
        "demo_*.cpp",
    ]),
)


cc_test(
    name = 'threads_env',
    srcs = ['threads_env.cpp'],
    deps = [
        "//zmbt:model",
        "@com_google_googletest//:gtest_main"
    ],
    defines = [
        "BOOST_TEST_LOG_LEVEL=all"
    ],
    linkopts = [
        '-lpthread',
        '-lm'
    ],
    env = {
    },
    args = [
        "--gtest_repeat=10",
        "--gtest_recreate_environments_when_repeating",
    ]
)
