# copyright (c) Copyright 2024 Zenseact AB
# SPDX-License-Identifier: Apache-2.0

load("//zmbt-framework/backends/cxx/test:rules.bzl", "make_unit_tests")

make_unit_tests(
    srcs = glob([
        "*.cpp"
    ], exclude = [
        "*gtest*",
    ]),
)

cc_library(
    name = 'gtest_test_exe',
    srcs = ['gtest_test.cpp'],
    visibility = [':__pkg__'],
    deps = [
        "//zmbt-framework/backends/cxx:zmbt",
        "//zmbt-framework/backends/cxx:zmbt_main_gtest",
    ],
    copts = [
        "-std=c++14",
        "-Werror",
        "-Wall",
        "-Wextra",
        "-Wpedantic",
        "-Wno-parentheses", # allow `x & y | z` in tests
    ],
    linkopts = [
        '-lpthread',
        '-lm'
    ],
)

cc_test(
    name = 'gtest_test',
    deps = [':gtest_test_exe'],
)

cc_test(
    name = 'gtest_multithreading_test',
    deps = [':gtest_test_exe'],
    args = [
        "--gtest_filter=RunInGtest.EnvThreadSafety",
        "--gtest_repeat=10",
        "--gtest_recreate_environments_when_repeating",
    ]
)
